objects/SA_Audit__Objects_And_Fields_Log__c.object
<CustomObject>
    <fields>
        <fullName>SA_Audit__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Audit__User_Name__c</fullName>
        <label>User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Objects And Fields Log</label>
    <listViews>
        <fullName>SA_Audit__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000000}</displayFormat>
        <label>Objects And Fields Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objects And Fields Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>